# ADC-PMV-LYSSTYRING

Opgave 5/: CMakeLists.txt
Opgave 5/include/: UART.h  adc.h  externInt.h  pwm.h  timer.h
Opgave 5/src/: UART.c  adc.c  externInt.c  main.c  pwm.c  ssd1306.c  timer.c
